plugins {
    id 'java'
    id 'application'
}

group = 'hr.ent'
version = '1.0-SNAPSHOT'

application {
    mainClass = 'Main'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}